# PaperFarm

./: .gitignore  AUTO_REVIEW.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  REVIEW_STATE.json  demo.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cancel-on-merge.yml  ci.yml  codeql.yml  codex-review.yml
analysis/daily/: 2026-03-09-deep-review.md
docs/: README.md  README.zh-CN.md  advanced-runtime-observability.md  architecture-review.en.md  architecture-review.md  repo_inventory.en.md  repo_inventory.md
docs/plans/: 2026-03-09-dual-agent-tui-design.md  2026-03-09-multiagent-tui-implementation.md  2026-03-09-multiagent-tui-redesign.md  2026-03-09-parallel-experiments-design.md  (+20 more)
tests/: test_activity.py  test_agent.py  test_agent_token_parsing.py  test_agents.py  test_app_state.py  test_bootstrap.py  test_brainstorm_round2_fixes.py  test_brainstorm_round3_fixes.py  test_brainstorm_round3_p1p2_fixes.py  test_claude_code_token_parsing.py  test_cli.py  test_config.py  test_config_cmd.py  test_control_plane.py  test_crash_counter.py  test_demo.py  test_doctor.py  test_evaluation_contract.py  test_export.py  test_git_safety.py  test_gpu_scheduling_stress.py  test_graph_context.py  test_graph_protocol.py  test_headless.py  test_headless_flow.py  test_hub_audit_fixes.py  test_idea_pool.py  test_ideas_cmd.py  test_init.py  test_integration.py  test_logs_cmd.py  test_parallel.py  test_parallel_runtime.py  test_phase_gate.py  test_record.py  test_record_script.py  test_research_graph.py  test_research_loop.py  test_results.py  test_role_programs.py  (+22 more)
(+154 files in other folders)
